Fixed spacing issue

--- a/assets/styles/index/title.css
+++ b/assets/styles/index/title.css
@@ -22,6 +22,12 @@
   color: rgb(0, 0, 0);
 }
 
+@media (max-width: 600px) {
+  .titlediv {
+    width: 100%;
+  }
+}
+
 :root.dark .titlediv > * {
   color: rgb(255, 255, 255);
 }
