--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,6 +57,7 @@ body {
   display: inline-flex;
   align-items: center;
   text-decoration: none;
+  margin: 5px 0px;
 }
 
 .button:hover {
